[package]
name = "trent"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
urlencoding = "2.1.3"

[dev-dependencies]
tokio = { version = "1.48.0", features = ["macros"] }
